.archive/kubernetes/apps/networking/ingresses/ingressRoutes/immich/ingress-traefikCRD.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &name immich
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`immich.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: networking
      priority: 1
      services:
        - name: immich-web
          port: 3000
          namespace: default
    - kind: Rule
      match: Host(`immich.${SECRET_DOMAIN}`) && PathPrefix(`/api`)
      middlewares:
        - name: headers
          namespace: networking
        - name: immich-strip-api-prefix
          namespace: networking
      priority: 2
      services:
        - name: immich-server
          port: 3001
          namespace: default
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: immich-strip-api-prefix
spec:
  stripPrefix:
    prefixes:
      - /api
